--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit
-langchain
+langchain>=0.1.0
+langchain-openai>=0.0.5
+openai>=1.0.0
 google-generativeai
-openai
 langchain-google-genai
-
